--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -203,7 +203,7 @@
 	z-index:1;
 }
 
-.form_box_g.main .rut_inner {
+.form_box_g.main .rout_inner {
 	width:100%;
 	display:flex;
 	padding:2rem 1rem 2rem 1rem;
@@ -217,7 +217,7 @@
 	pointer-events: none;
 }
 
-.form_box_g.main .rut_inner .com_btn {
+.form_box_g.main .rout_inner .com_btn {
 	width:95%;
 	height:2rem;
 	position:absolute;
@@ -225,84 +225,84 @@
 	text-align:right;
 }
 
-.form_box_g.main .rut_inner .com_btn a {
+.form_box_g.main .rout_inner .com_btn a {
 	width:1.2rem;
 	height:1.2rem;
 	display:inline-block
 }
 
-.form_box_g.main .rut_inner .com_btn a img {
+.form_box_g.main .rout_inner .com_btn a img {
 	width:100%;
 	height:100%;
 }
 
-.form_box_g.main .rut_inner .com_btn .left {
+.form_box_g.main .rout_inner .com_btn .left {
 	float:left
 }
 
-.form_box_g.main .rut_inner .com_btn .left img {
+.form_box_g.main .rout_inner .com_btn .left img {
 	width:1.5rem;
 	height:1.5rem;
 }
 
-.form_box_g.main .rut_inner a {
+.form_box_g.main .rout_inner a {
 	display:inline-block;
 }
 
-.form_box_g.main .rut_inner a img {
+.form_box_g.main .rout_inner a img {
 	width:2rem;
 	height:2rem;
 }
 
-.form_box_g.main .rut_inner a span {
+.form_box_g.main .rout_inner a span {
 	display:none
 }
 
-.form_box_g.main .rut_inner .left {
+.form_box_g.main .rout_inner .left {
 	min-height:9rem;
 	flex: 1;
 	margin-top:-1.5rem;
 }
 
-.form_box_g.main .rut_inner .left em {
+.form_box_g.main .rout_inner .left em {
 	line-height:1.5rem;
 }
 
-.form_box_g.main .rut_inner .left em a {
+.form_box_g.main .rout_inner .left em a {
 	margin-top:-0.3rem
 }
 
-.form_box_g.main .rut_inner .left .detail_box {
+.form_box_g.main .rout_inner .left .detail_box {
 	font-size:0.9rem;
 	letter-spacing: -0.01rem;
 	margin-top:0.5rem
 }
 
-.form_box_g.main .rut_inner .left .detail_box a {
+.form_box_g.main .rout_inner .left .detail_box a {
 	text-decoration: underline;
 }
 
-.form_box_g.main .rut_inner .left .detail_box p.done_icon {
+.form_box_g.main .rout_inner .left .detail_box p.done_icon {
 }
 
-.form_box_g.main .rut_inner .left .detail_box p.done_icon.pink  {
+.form_box_g.main .rout_inner .left .detail_box p.done_icon.pink  {
 	color:#ff7d7d
 }
 
-.form_box_g.main .rut_inner .left .detail_box p.done_icon.green  {
+.form_box_g.main .rout_inner .left .detail_box p.done_icon.green  {
 	color:#009b49
 }
 
-.form_box_g.main .rut_inner .left .detail_box p.done_icon.gray  {
+.form_box_g.main .rout_inner .left .detail_box p.done_icon.gray  {
 	color:#b6b6b6
 }
 
-.form_box_g.main .rut_inner .right {
+.form_box_g.main .rout_inner .right {
 	width: 6rem;
 	text-align:center;
 }
 
-.form_box_g.main .rut_inner em {
+.form_box_g.main .rout_inner em {
 	font-size:1.2rem;
 	font-weight:bold;
 	line-height:1.2rem;
@@ -310,17 +310,17 @@
 	margin:0.5rem 0 0.5rem 0;
 }
 
-.form_box_g.main .rut_inner em a img {
+.form_box_g.main .rout_inner em a img {
 	width:1.2rem;
 	height:1.2rem;
 }
 
-.form_box_g.main .rut_inner .right .walking  {
+.form_box_g.main .rout_inner .right .walking  {
 	height:100%;
 	position:relative
 }
 
-.form_box_g.main .rut_inner .right .walking [class*="step0"] {
+.form_box_g.main .rout_inner .right .walking [class*="step0"] {
 	width:100%;
 	height:50%;
 	background-size: contain;
@@ -329,12 +329,12 @@
 	padding:0;
 }
 
-.form_box_g.main .rut_inner .right .walking .step01 {
+.form_box_g.main .rout_inner .right .walking .step01 {
 	position:absolute;
 	bottom:1rem;
 }
 
-.form_box_g.main .rut_inner .right .walking a.step {
+.form_box_g.main .rout_inner .right .walking a.step {
 	width:100%;
 	height:1.5rem;
 	display:inline-block;
@@ -350,19 +350,19 @@
 	font-family: Paperlogy-8ExtraBold;
 }
 
-.form_box_g.main .rut_inner .right .walking span.step strong {
+.form_box_g.main .rout_inner .right .walking span.step strong {
 	color:#ff6600;
 	font-size:0.8rem;
 }
 
-.form_box_g.main .rut_inner .right .walking .speech-bubble {
+.form_box_g.main .rout_inner .right .walking .speech-bubble {
 	width:100%;
 	position:absolute;
 	top:0rem;;
 	right:0.5rem;
 }
 
-.form_box_g.main .rut_inner .right .walking .speech-bubble span {
+.form_box_g.main .rout_inner .right .walking .speech-bubble span {
 	width:45%;
 	height:42%;
 	font-family: Ownglyph_ParkDaHyun;
@@ -379,16 +379,6 @@
 	margin:0;
 }
 
-.done_check {
-	width:100%;
-	margin-top:1rem;
-	font-size:2rem;
-	text-align:left;
-	line-height:2rem;
-	padding-top:1rem;
-	border-top:0.1rem dotted #eee
-}
-
 /* 말풍선 */
 .speech-bubble {
   display: inline-block;
@@ -401,6 +391,17 @@
   font-size: 0.7rem;
   color: #333;
   position: relative;
+}
+
+.done_check {
+	width:100%;
+	height:5rem;
+	margin-top:1rem;
+	font-size:2rem;
+	text-align:left;
+	line-height:2rem;
+	padding-top:1rem;
+	border-top:0.1rem dotted #eee;
 }
 
 /* 달성현황 */
@@ -423,22 +424,32 @@
 	color:#b0b0b0;
 }
 
+.walking [class*="step0"] {
+	width:20%;
+	float:left;
+}
+
 .walking [class*="step0"].off {
-	opacity: 0.3; /* ← 알파값 */
+	opacity: 0.3;
   z-index: -1;
 }
+
 .walking .step01 {
   background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step02 {
   background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step03 {
   background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step04 {
   background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step05 {
   background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
 }
@@ -446,16 +457,40 @@
 .walking .step01.off {
   background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step02.off {
   background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step03.off {
   background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step04.off {
   background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
 }
+
 .walking .step05.off {
   background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
+}
+
+/* 다짐추가하기 버튼 */
+.add_rout {
+	width:3.5rem;
+	height:3.5rem;
+	position:fixed;
+	bottom:17rem;
+	right:2rem;
+	z-index:1;
+	background-color:#fff;
+	border-radius: 50%;
+}
+
+.add_rout img {
+	width:100%;
+	height:100%
+}
+.add_rout span {
+	display:none
 }
 
