--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -1,3 +1,8 @@
+body.popup-open {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
 
 .popup_overlay {
   position: fixed;
@@ -13,7 +18,7 @@
 }
 
 .popup_box {
-  background-color: #ffffff;
+  background-color: #f9f9f9;
 	position:relative;
   padding: 2rem;
   border-radius: 1.5rem;
@@ -28,12 +33,6 @@
 	font-family: Paperlogy-8ExtraBold;
 	font-size:1.5rem;
 	margin-bottom:1rem;
-}
-
-.popup_box .close_btn {
-	position:absolute;
-	top:0.8rem;
-	right:0.8rem;
 }
 
 .popup_box  button.pop_btm {
@@ -56,13 +55,52 @@
 	margin-top:0.5rem;
 }
 
+.popup_box .close_btn {
+	position:absolute;
+	top:0.8rem;
+	right:0.8rem;
+}
+
+.lnb_wrap .close_btn {
+	position:absolute;
+	top:0.8rem;
+	right:0.8rem;
+}
+
+.close_btn {
+	width:2rem;
+	height:2rem;
+	border-radius:50%;
+	position:fixed;
+	top:0.8rem;
+	right:0.8rem;
+	display: inline-block;
+	background:url('../images/ico_close02.png') no-repeat 0 0/cover;
+	z-index:9999;
+}
+
+.close_btn span{
+	display:none!important
+}
+
+
+
+/* 전체 팝업 */
 .popup_wrap {
+	width:100%;
+	height:100%;
+	position:fixed;
+	top:0;
+	left:0;
 	padding:2rem;
+	background-color:#f9f9f9;
+	overflow-y:auto;
+	z-index:888;
 }
 
 .popup_wrap .popup_inner {
 	margin-top:2rem;
-	margin-bottom:4rem
+	margin-bottom:4rem;
 }
 
 .popup_wrap h2 {
@@ -72,8 +110,8 @@
 	position:fixed;
 	top:0;
 	left:0;
-	background-color:#fff9f4;
 	z-index:9999;
+	background-color:#f9f9f9
 }
 
 .popup_wrap .popup_btm {
@@ -83,8 +121,8 @@
 	position:fixed;
 	bottom:0;
 	left:0;
-	background-color:#fff9f4;
 	z-index:9999;
+	background-color:#f9f9f9
 }
 
 .popup_wrap .popup_btm button {
@@ -98,7 +136,7 @@
 	font-size:1.3rem;
 	border-radius:1.5rem;
 	border:0.1rem solid #333;
-	background-color:#333
+	background-color:#333;
 }
 
 .popup_wrap h2,
@@ -126,7 +164,7 @@
 	padding:1rem;
 	background-color:#fff;
 	border-radius:1rem;
-	border:0.1rem solid #f7ece6
+	border:0.1rem solid #ddd
 }
 
 .form_box_g.rt_make input[type="text"] {
@@ -161,20 +199,4 @@
 
 .form_box_g.rt_make p span {
 	color:#333
-}
-
-.close_btn {
-	width:2rem;
-	height:2rem;
-	border-radius:50%;
-	position:fixed;
-	top:0.8rem;
-	right:0.8rem;
-	display: inline-block;
-	background:url('../images/ico_close02.png') no-repeat 0 0/cover;
-	z-index:9999;
-}
-
-.close_btn span{
-	display:none!important
 }
