--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -18,8 +18,10 @@ body.popup-open {
   z-index: 999;
 }
 
-.popup_box {
-  background-color: #f9f9f9;
+.popup_box,
+.wheel-popup {
+	min-width:70%;
+  background-color: #fff;
 	position:relative;
   padding: 2rem;
   border-radius: 1.5rem;
@@ -28,7 +30,8 @@ body.popup-open {
   box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
 }
 
-.popup_box h2 {
+.popup_box h2,
+.wheel-popup h2 {
 	display:inline-block;
 	text-align:center;
 	font-family: Paperlogy-8ExtraBold;
@@ -36,7 +39,8 @@ body.popup-open {
 	margin-bottom:1rem;
 }
 
-.popup_box  button.pop_btm {
+.popup_box  button.pop_btm,
+.wheel-popup button.pop_btm{
 	width:100%;
 	height:3rem;
 	background-color:#333;
@@ -49,14 +53,16 @@ body.popup-open {
 	margin-top:1rem
 }
 
-.popup_box  button.pop_btm.white {
+.popup_box  button.pop_btm.white,
+.wheel-popup  button.pop_btm.white {
 	background-color:#fff;
 	color:#333;
 	border:0.1rem solid #333;
 	margin-top:0.5rem;
 }
 
-.popup_box .close_btn {
+.popup_box .close_btn,
+.wheel-popup .close_btn {
 	position:absolute;
 	top:0.8rem;
 	right:0.8rem;
@@ -85,6 +91,34 @@ body.popup-open {
 }
 
 
+/* 휠피커 */
+
+.wheel-list-container {
+  height: 10rem;
+  overflow: hidden;
+  position: relative;
+	border:none;
+	border-radius: 0;
+}
+
+.wheel-list {
+  transition: transform 0.2s;
+}
+
+.wheel-item {
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.1rem;
+  color: #999;
+	border-radius: 1rem
+}
+
+.wheel-item.selected {
+  font-weight: bold;
+  color: #333;
+  background-color: #fff55d;
+	border:0.1rem solid #fff55d
+}
 
 /* 전체 팝업 */
 .popup_wrap {
@@ -160,63 +194,6 @@ body.popup-open {
 }
 
 
-
-
-/* 휠피커 */
-.wheel-popup {
-  width: 80%;
-  max-width: 20rem;
-  text-align: center;
-}
-
-.wheel-title {
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
-  font-weight: bold;
-}
-
-.wheel-list-container {
-  height: 200px;
-  overflow: hidden;
-  border: 1px solid #ddd;
-  border-radius: 0.5rem;
-  margin-bottom: 1rem;
-  position: relative;
-	background-color:#fff;
-}
-
-.wheel-list {
-  transition: transform 0.2s;
-}
-
-.wheel-item {
-  height: 40px;
-  line-height: 40px;
-  font-size: 1.1rem;
-  color: #999;
-}
-
-.wheel-item.selected {
-  font-weight: bold;
-  color: #000;
-  background-color: #ffeeba;
-}
-
-.wheel-actions {
-  display: flex;
-  justify-content: space-around;
-  gap: 1rem;
-}
-
-.wheel-actions button {
-  flex: 1;
-  padding: 0.6rem;
-  font-size: 1rem;
-  border-radius: 0.5rem;
-  border: none;
-  background-color: #438edb;
-  color: white;
-}
 
 /* 다짐 만들기 */
 .form_box_g {
