--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -37,6 +37,7 @@ body.popup-open {
 	font-family: Paperlogy-8ExtraBold;
 	font-size:1.5rem;
 	margin-bottom:1rem;
+  z-index:888;
 }
 
 .popup_box  button.pop_btm,
@@ -50,7 +51,8 @@ body.popup-open {
 	border-radius:1rem;
 	line-height:1.5rem;
 	padding:0 2rem 0 2rem;
-	margin-top:1rem
+	margin-top:1rem;
+  z-index:888;
 }
 
 .popup_box  button.pop_btm.white,
