--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -39,6 +39,7 @@ body.popup-open {
 	font-size:1.5rem;
 	margin-bottom:1rem;
   z-index:10;
+  border:1px solid yellow
 }
 
 .popup_box  button.pop_btm,
@@ -54,6 +55,7 @@ body.popup-open {
 	padding:0 2rem 0 2rem;
 	margin-top:1rem;
   z-index:10;
+  border:1px solid green;
 }
 
 .popup_box  button.pop_btm.white,
