--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -288,3 +288,31 @@ body.popup-open {
   font-size: 1rem;
   cursor: pointer;
 }*/
+
+
+/*inline wheel*/
+.inline-wheel-container {
+  overflow: hidden;
+  height: 6rem;
+  position: relative;
+  width: 100%;
+}
+.inline-wheel-list {
+  transition: transform 0.2s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.inline-wheel-item {
+  text-align: center;
+  font-size: 1rem;
+  color: #bcbcbc;
+  user-select: #none;
+  width: 100%;
+}
+.inline-wheel-item.selected {
+  font-weight: bold;
+  color: #333;
+  border-radius: 1rem;
+  background-color: #ffed71;
+}
