--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -240,6 +240,183 @@ body.popup-open {
 	color:#333
 }
 
+.form_box_g.rt_make h3 {
+	text-align:center
+}
+.form_box_g.rt_make p.button button {
+	width: 100%;
+	line-height: 2rem;
+	color: #333;
+	background-color: #fff282;
+	border: 0.1rem solid #fff282;
+	border-radius: 1rem;
+}
+
+.form_box_g.rt_make.day_box button[id^='v_detail'] {
+	width: 32%;
+	background-color: #fff;
+	border: 0.1rem solid #17a47a;
+	margin-right: 1%;
+	color: #17a47a;
+}
+.form_box_g.rt_make.day_box button.on {
+	color: #fff;
+	background-color: #17a47a;
+	border: 0.1rem solid #17a47a;
+}
+.form_box_g.rt_make.day_box [id$='_block'] {}
+
+.form_box_g.rt_make.day_box p {
+	margin-bottom: 0.5rem;
+}
+.form_box_g.rt_make.day_box p:last-child {
+	margin-bottom: 0;
+}
+.form_box_g.rt_make.day_box p.check_btn button {
+	width: 24%;
+	margin: 0 1% 0.5rem 0;
+	display: inline-block;
+	color: #333;
+	border-radius: 1rem;
+	border: 0.1rem solid #e7e7e7;
+	text-align: center;
+	line-height: 1rem;
+}
+.form_box_g.rt_make.day_box p.check_btn button:last-child {
+	margin-right: 0;
+}
+.form_box_g.rt_make.day_box p.check_btn button.on {
+	font-weight: bold;
+	padding-left: 1rem;
+	background: url('https://img.icons8.com/?size=100&id=11849&format=png&color=000000') left 0.5rem center / 0.8rem 0.8rem no-repeat;
+}
+
+.start_date_preview {
+	margin: 0.5rem 0 0;
+	font-size: 0.9rem;
+	color: #444;
+}
+
+.form_box_g.rt_make.start_alarm_box  {
+	text-align:left;
+}
+.form_box_g.rt_make.start_alarm_box div {
+	margin-bottom:0.5rem;
+}
+.form_box_g.rt_make.start_alarm_box div:last-child {
+	margin-bottom:0
+}
+
+.start_date_preview {
+	float:right
+}
+
+.select_week,
+.select_m_inner {
+	border-radius:1rem;
+	background-color:#f9f9f9;
+	border:0.1rem solid #f2f2f2;
+	margin-bottom:0.5rem
+}
+
+.monthly-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 0.4rem;
+  margin-top:0.2rem;
+}
+
+.monthly-grid span.m_s_btn {
+	display:inline-block;
+  padding: 0.5rem;
+	margin-bottom:0.5rem;
+  font-size: 0.8rem;
+  background-color: #fff;
+  border: 0.1rem solid #ccc;
+  border-radius:50%;
+  text-align: center;
+  cursor: pointer;
+}
+
+.monthly-grid span.m_s_btn.selected {
+  background-color: #ffe990;
+  border-color: #ffe990;
+  font-weight: bold;
+}
+.form_box_g.rt_make .comment {
+	font-size:0.8rem;
+	line-height:1rem;
+	color:#666;
+	margin:0 0 0.5rem 0;
+}
+.form_box_g.rt_make .walking_goal input {
+	width:5rem!important;
+	text-align:right!important;
+	border:0.1rem solid #aaa;
+	border-radius:1rem;
+}
+
+.form_box_g.rt_make .color_chart {
+	width:100%!important;
+	margin:0 auto;
+	margin-top:0.5rem;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0.2rem;
+	align-items: center;
+	justify-content: center;
+}
+
+.form_box_g.rt_make .color_chart span[class^='cchart'] {
+	width:7%;
+	aspect-ratio: 1 / 1;
+	margin-right:1%;
+	border-radius:50%;
+	display:inline-block;
+}
+
+.form_box_g.rt_make .color_chart span[class^='cchart'].on {
+	border:0.2rem solid #333;
+}
+.form_box_g.rt_make .color_chart .cchart01 {
+	background-color:#ff4f4f
+}
+.form_box_g.rt_make .color_chart .cchart02 {
+	background-color:#ff7a32
+}
+.form_box_g.rt_make .color_chart .cchart03 {
+	background-color:#ff6792
+}
+.form_box_g.rt_make .color_chart .cchart04 {
+	background-color:#ffc24d
+}
+.form_box_g.rt_make .color_chart .cchart05 {
+	background-color:#a1d156
+}
+.form_box_g.rt_make .color_chart .cchart06 {
+	background-color:#56d1b0
+}
+.form_box_g.rt_make .color_chart .cchart07 {
+	background-color:#36b9c9
+}
+.form_box_g.rt_make .color_chart .cchart08 {
+	background-color:#3f6ed8
+}
+.form_box_g.rt_make .color_chart .cchart09 {
+	background-color:#9b6dd4
+}
+.form_box_g.rt_make .color_chart .cchart10 {
+	background-color:#5a5a5a
+}
+
+.form_box_g.rt_make textarea{
+	width:100%;
+	border:0.1rem solid #aaa;
+	padding:0.5rem;
+	border-radius:1rem;
+	margin-top:0.5rem;
+}
+
 /*date time picker */
 /*.wheel-overlay {
   position: fixed;
