--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -121,7 +121,7 @@
 	width:30%;
 	height:100%;
 	position:relative;
-	background-color:#333;
+	background-color:#fff;
 	border-radius: 1rem;
 	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
