--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -307,12 +307,12 @@ body.popup-open {
 	margin-bottom:0
 }
 
-.walking_goral {
+.walking_goal {
 	text-align:center;
   background-color:red
 }
 
-.walking_goral .pretty-radio-block {
+.walking_goal .pretty-radio-block {
 	float:left;
 }
 
