--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -299,6 +299,27 @@
 	color:#b6b6b6
 }
 
+.form_box_g.main .wbtn {
+	width:100%;
+	line-height:2rem;
+	margin-top:1rem;
+	border-radius:1rem;
+}
+
+span.icon.temp {
+	width:1.5rem;
+	height:1.5rem;
+	display:inline-block;
+	vertical-align:middle;
+	margin-right:0.5rem;
+}
+
+.form_box_g.main span[class*='cchart'] {
+	width:1rem;
+	height:1rem;
+	border-radius: 50%;
+	margin-left:0.2rem; 
+}
 
 .form_box_g.main em {
 	font-size:1.2rem;
