--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -41,7 +41,7 @@
 }
 
 .popup_box  button.pop_btm,
-.wheel-popup button.pop_btm{
+.wheel-popup button.pop_btm {
 	width:100%;
 	height:3rem;
 	background-color:#333;
@@ -56,7 +56,8 @@
 }
 
 .popup_box  button.pop_btm.white,
-.wheel-popup  button.pop_btm.white {
+.wheel-popup  button.pop_btm.white,
+.wbtn {
 	background-color:#fff;
 	color:#333;
 	border:0.1rem solid #333;
@@ -345,8 +346,10 @@
 }
 
 .monthly-grid span.m_s_btn {
+	width:2.5rem;
+	height:2.5rem;
+	line-height:2.2rem;
 	display:inline-block;
-  padding: 0.5rem;
 	margin-bottom:0.5rem;
   font-size: 0.8rem;
   background-color: #fff;
