--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -129,7 +129,8 @@ label {
   font-size: 1.2rem;
   font-weight: 600;
   cursor: pointer;
-  background-color: #438EDB;
+  background-color: #00a977;
+  border:0.1rem solid #00a977;
   color: #fff;
   text-decoration: none;
 }
