common.css 업데이트

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -129,9 +129,9 @@ label {
   font-size: 1.2rem;
   font-weight: 600;
   cursor: pointer;
-  background-color: #333;
-  border:0.1rem solid #333;
-  color: #fff;
+  background-color: #ffed89;
+  border:0.1rem solid #ffed89;
+  color: #333;
   text-decoration: none;
 }
 
