common.css 업데이트

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -129,8 +129,8 @@ label {
   font-size: 1.2rem;
   font-weight: 600;
   cursor: pointer;
-  background-color: #ffed89;
-  border:0.1rem solid #ffed89;
+  background-color: #fff1c2;
+  border:0.1rem solid #ccc;
   color: #333;
   text-decoration: none;
 }
