common.css 업데이트

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -129,8 +129,8 @@ label {
   font-size: 1.2rem;
   font-weight: 600;
   cursor: pointer;
-  background-color: #ff505c;
-  border:0.1rem solid #ff505c;
+  background-color: #ff4a41;
+  border:0.1rem solid #ff4a41;
   color: #fff;
   text-decoration: none;
 }
