--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -115,6 +115,8 @@ a {
   cursor: pointer;
   vertical-align:middle;
   text-decoration:none;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 button[class^="b_"],
