common.css 업데이트

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -108,12 +108,12 @@ label {
 	display:none
 }
 
-button,
-a {
+button {
   text-align: center;
   cursor: pointer;
   vertical-align:middle;
   text-decoration:none;
+  display:inline-block;
 }
 
 button[class^="b_"],
