common.css 업데이트

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -439,7 +439,7 @@ a[class$="green"] {
 }
 
 .intro_wrap h1 {
-	font-family: 'Freesentation-9Black';
+	font-family: 'Paperlogy-8ExtraBold';
   font-size:3rem;
   line-height:3.5rem;
 }
