--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -33,6 +33,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'omyu_pretty';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -59,7 +66,8 @@ h1 {
 }
 
 h2 {
-  font-family: 'Paperlogy-8ExtraBold';
+  font-family: 'omyu_pretty';
+  font-weight: bold;
   font-size:2rem;
   line-height:2.5rem;
   color:#00b170
