--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -19,23 +19,10 @@
   font-style: normal;
 }
 
-@font-face {
-    font-family: 'Ownglyph_ParkDaHyun';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2411-3@1.0/Ownglyph_ParkDaHyun.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
 
 @font-face {
     font-family: 'GmarketSansMedium';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'omyu_pretty';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -66,7 +53,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'omyu_pretty';
+  font-family: 'GmarketSansMedium';
   font-weight: bold;
   font-size:2rem;
   line-height:2.5rem;
