--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Freesentation-9Black'
+  font-family: 'Freesentation-9Black';
   font-weight: bold;
   font-size:2rem;
   line-height:2.5rem;
