--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -129,9 +129,10 @@ a[class$="green"] {
   border-radius: 1rem;
   animation: fadeIn 0.3s ease-in-out;
   text-align: center;
-  background-color:#f1f1f1;
-  color:#333;
-  border:0.1rem solid #e9e9e9
+  font-size:0.8rem;
+  letter-spacing:-0.01rem;
+  background-color:#fff6d6;
+  border:0.1rem solid #f8eaba;
 }
 
 .warn-message {
