--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -124,11 +124,12 @@ a[class$="green"] {
 .warn-message,
 .info-message {
   width:100%;
-  margin:1rem 0 1rem 0;
-  padding: 1rem;
+  margin:1.5rem 0 1.5rem 0;
+  padding: 1.5rem;
   border-radius: 1rem;
   animation: fadeIn 0.3s ease-in-out;
   text-align: center;
+  font-size:0.9rem;
   letter-spacing:-0.01rem;
   background-color:#f9f9f9;
   border:0.1rem solid #f1f1f1;
