--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -108,8 +108,8 @@ a[class^="b_"] {
   width:100%;
   padding: 0.8rem 0;
   border-radius: 2rem;
-  font-size: 1.2rem;
-  font-weight: 800;
+  font-size: 1.3rem;
+  font-weight: bold;
   display:inline-block;
   text-decoration:none;
 }
