--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -138,7 +138,6 @@ a[class$="green"] {
 
 .warn-message {
 }
-
 .warn-message p {
   margin: 0.3rem 0;
   font-weight: bold;
@@ -147,7 +146,8 @@ a[class$="green"] {
 .info-message {
 }
 
-.input.error {
+.input.error,
+.input-error {
   border: 1px solid #e5484d;
   background-color: #fff0f0;
   outline: none;
