--- a/src/assets/css/join.css
+++ b/src/assets/css/join.css
@@ -8,7 +8,6 @@
   background-color:#fff;
 }
 
-
 /* 인트로 */
 .intro_wrap {
 	width:80%;margin:0 auto
@@ -42,36 +41,30 @@
 }
 
 
-.join_wrap .button botton {
-  margin-bottom:0.5rem
+.join_wrap .button button {
+  margin-bottom:0.8rem
 }
 
 .join_wrap .form {
 	margin:1rem 0 0.5rem 0;
 }
 
-.join_wrap .join_inner {
+.join_wrap .radio{
+  text-align:center;
+  margin-bottom:1rem;
+  margin-top:1rem
 }
 
-.join_wrap .radio {
-	width:100%;
-	margin-bottom:1rem;
-}
-
-
-.join_wrap .agree {
-	width:100%;
-	margin-top:0.5rem;
-}
-
-.checkbox-label {
+.join_wrap .join_inner .radio .checkbox-label {
   display: flex;
-  align-items: center;
+  justify-content: center; 
+  align-items: center;  
   gap: 0.5rem;
+  margin:0 auto;
 }
 
-.checkbox-label input[type="checkbox"] {
-  display: inline-block !important;
+.join_wrap .join_inner .radio .checkbox-label input[type="checkbox"] {
+  display: inline-block;
   width: 1.2rem;
   height: 1.2rem;
   margin: 0;
@@ -79,4 +72,10 @@
   position: static !important;
   opacity: 1 !important;
 }
+
+.join_wrap .agree {
+	width:100%;
+	margin-top:0.5rem;
+}
+
 
