--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -128,6 +128,12 @@ button {
   color: #fff;
 }
 
+[class$="blue"] {
+  background-color: #5c92ff;
+  border:0.1rem solid #5c92ff;
+  color: #fff;
+}
+
 [class$="white_br_green"] {
   background-color: #fff;
   border:0.1rem solid #00b170;
